<resources>
    <string name="app_name">new_ITalk</string>
    <string name="personalInfo">
        개인정보 수집 및 활용 동의서\n\n\n 가) 수집하는 개인정보 항목\n - 기기번호, 학번, 이름, 전화번호, 이메일\n\n 나) 개인정보 활용 목적\n - 시스템 서비스 제공\n\n 다) 개인정보 보유 및 이용 기간\n - 회원가입 완료부터 회원탈퇴 순간까지\n 회원 탈퇴 시 수집된 개인정보는 파기됩니다.\n\n 라) 개인정보 수집 동의 거부의 권리\n - 개인정보 수집 및 이용에 대해 거부할 권리가 있으며,\n 이를 거부할 경우 서비스를 이용하실 수 없습니다.
    </string>
    <string name="agree">개인정보 수집 및 활용 동의</string>
    <string name="disagree">개인정보 수집 및 활용 거부</string>
    <string name="personalInfoAgree">개인정보 활용 동의</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_people">People</string>
    <string name="title_inquiry">Inquiry</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_setting">Setting</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>