<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_people"
        android:layout_width="wrap_content"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/title_people" />
    <item
        android:id="@+id/navigation_inquiry"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/title_inquiry" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_setting" />
</menu>