<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonalInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical"
            android:padding="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_chevron_left_white_24dp"
                        android:id="@+id/goBackImageView"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="개인정보 활용 동의"
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personalInfo"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:textStyle="bold"
                android:textSize="15sp"
                android:padding="10dp"/>
            <Button
                android:id="@+id/agreeButton"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/agree"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:background="@color/colorPrimary"
                android:textColor="#FFFFFF"
                android:layout_marginTop="40dp"
                android:padding="10dp"/>
            <Button
                android:id="@+id/disagreeButton"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/disagree"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:background="@color/colorPrimary"
                android:textColor="#FFFFFF"
                android:layout_marginTop="10dp"
                android:padding="10dp"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>